automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         dodger.style.left = `${left - 1}px`
         }
       }
+      document.addEventListener('keydown', function(e) {
+      if (e.which === 37) {
+        moveDodgerLeft()
+      }
+    })
     </script>
   </body>
 </html>
