automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         dodger.style.left = `${left - 1}px`
         }
       }
-      document.addEventListener('keydown', function(e) {
+      document.addEventListener('keydown', function(e)) {
       if (e.which === 37) {
         moveDodgerLeft()
       }
