--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         dodger.style.left = `${left - 1}px`
         }
       }
-      document.addEventListener('keydown', function(e)) {
+      document.addEventListener('keydown', function(e) {
       if (e.which === 37) {
         moveDodgerLeft()
-      }
-    })
+        }
+      })
     </script>
   </body>
 </html>
